--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Currículum Vitae profesional – Diseñador y Desarrollador Web">
-    <title>Currículum Vitae | Tu Nombre</title>
+    <title>Currículum Vitae | Faysal Boughrousi Bouzalmat</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;500&display=swap"
@@ -1678,5 +1678,6 @@
     </script>
 
 </body>
+
 
 </html>
