--- a/index.html
+++ b/index.html
@@ -1137,6 +1137,7 @@
                 <li><a href="#experiencia">Experiencia</a></li>
                 <li><a href="#educacion">Educación</a></li>
                 <li><a href="#habilidades">Habilidades</a></li>
+                <li><a href="#idiomas">Idiomas</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
@@ -1461,6 +1462,12 @@
             </div>
             <div class="languages-grid reveal stagger">
                 <div class="lang-card">
+
+                    <!--Las banderas funcionan en teléfonos móviles sin problema alguno, sin embargo en ordenadores se ve el texto-->
+                    <!--Para solucionar esto se puede usar imágenes de banderas-->
+                    <!--Lo dejaré con que muestre el texto y sin comerme más la cabeza-->
+
+
                     <div class="lang-card__flag">🇪🇸</div>
                     <h3 class="lang-card__name">Español</h3>
                     <p class="lang-card__level">Nativo</p>
